bdr.BDR2.scala.error
Erreur de compilation :
BDR2:19: error: illegal start of simple pattern
    case => a=false;
         ^BDR2:19: error: '=>' expected but ';' found.
    case => a=false;
                   ^